--- a/app/index.html
+++ b/app/index.html
@@ -2,14 +2,25 @@
 <html lang="en" ng-app>
 <head>
   <meta charset="utf-8">
-  <title>My HTML File</title>
+  <title>Google Phone Gallery</title>
   <link rel="stylesheet" href="css/app.css">
   <link rel="stylesheet" href="css/bootstrap.css">
   <script src="lib/angular/angular.js"></script>
 </head>
 <body>
 
-  <p>Nothing here {{'yet' + '!'}}</p>
+  <p>Total number of phones: 3</p>
+
+  <ul>
+    <li>
+      <span>Nexus S</span>
+      <p>Fast just got faster with Nexus S</p>
+    </li>
+    <li>
+      <span>Motorola XOOM with Wifi</span>
+      <p>The next, next generation tablet</p>
+    </li>
+  </ul>
 
 </body>
 </html>
