--- a/app/index.html
+++ b/app/index.html
@@ -1,26 +1,32 @@
 <!doctype html>
-<html lang="en" ng-app>
+<html lang="en" ng-app="phonecatApp">
 <head>
   <meta charset="utf-8">
   <title>Google Phone Gallery</title>
   <link rel="stylesheet" href="css/app.css">
   <link rel="stylesheet" href="css/bootstrap.css">
   <script src="lib/angular/angular.js"></script>
+  <script src="js/controllers.js"></script>
 </head>
-<body>
+<body ng-controller="PhoneListCtrl">
 
-  <p>Total number of phones: 3</p>
+  <p>{{hello()}}</p>
+
+  <p>Total number of phones: {{phones.length}}</p>
 
   <ul>
-    <li>
-      <span>Nexus S</span>
-      <p>Fast just got faster with Nexus S</p>
-    </li>
-    <li>
-      <span>Motorola XOOM with Wifi</span>
-      <p>The next, next generation tablet</p>
+    <li ng-repeat="phone in phones">
+      {{phone.name}}
+      <p>{{phone.snippet}}</p>
     </li>
   </ul>
+
+  <table>
+    <tr><th>row number</th></tr>
+    <tr ng-repeat="i in [0, 1, 2, 3, 4, 5, 6, 7]">
+      <td>{{i}}</td>
+    </tr>
+  </table>
 
 </body>
 </html>
